--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "chronos-pomodoro": "file:",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
